--- a/src/Vue/Vue/Vue.csproj
+++ b/src/Vue/Vue/Vue.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Content Include="wwwroot\index.html" />
+    <Content Include="wwwroot\index2.html" />
     <Content Include="wwwroot\js\vue.js" />
   </ItemGroup>
   <ItemGroup>
